versions/0.8.0/_sources/refs/_aws-cdk_aws-sns.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"tKlBvYsIPViwRmxGOhw5mh7iQYKvDHWwy0aiCOpnCZ4="}

@aws-cdk/aws-sns
================

.. mdinclude:: ./__aws-cdk_aws-sns.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-sns

EmailSubscriptionOptions (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EmailSubscriptionOptions

   Options for email subscriptions.




   .. py:attribute:: json

      Indicates if the full notification JSON should be sent to the email address or just the message text.


      :type: boolean or undefined


Subscription
^^^^^^^^^^^^

.. py:class:: Subscription(parent, name, props)

   A new subscription.  Prefer to use the `TopicRef.subscribeXxx()` methods to creating instances of this class.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.SubscriptionProps`

SubscriptionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SubscriptionProps

   Properties for creating a new subscription




   .. py:attribute:: protocol

      What type of subscription to add.


      :type: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`


   .. py:attribute:: endpoint

      The subscription endpoint.  The meaning of this value depends on the value for 'protocol'.


      :type: any


   .. py:attribute:: topic

      The topic to subscribe to.


      :type: :py:class:`~@aws-cdk/aws-sns.TopicRef`


SubscriptionProtocol (enum)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SubscriptionProtocol

   .. py:data:: Http

   .. py:data:: Https

   .. py:data:: Email

   .. py:data:: EmailJson

   .. py:data:: Sms

   .. py:data:: Sqs

   .. py:data:: Application

   .. py:data:: Lambda


Topic
^^^^^

.. py:class:: Topic(parent, name, [props])

   A new SNS topic


   :extends: :py:class:`~@aws-cdk/aws-sns.TopicRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.TopicProps` or undefined

   .. py:attribute:: topicArn

      :type: :py:class:`~@aws-cdk/aws-sns.TopicArn` *(readonly)*


   .. py:attribute:: topicName

      :type: :py:class:`~@aws-cdk/aws-sns.TopicName` *(readonly)*


   .. py:attribute:: autoCreatePolicy

      Controls automatic creation of policy objects.  Set by subclasses.


      :type: boolean *(readonly)*


TopicArn
^^^^^^^^

.. py:class:: TopicArn([valueOrFunction])

   ARN of a Topic


   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

TopicName
^^^^^^^^^

.. py:class:: TopicName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

TopicPolicy
^^^^^^^^^^^

.. py:class:: TopicPolicy(parent, name, props)

   Applies a policy to SNS topics.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.TopicPolicyProps`

   .. py:attribute:: document

      The IAM policy document for this policy.


      :type: :py:class:`@aws-cdk/cdk.PolicyDocument` *(readonly)*


TopicPolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicPolicyProps



   .. py:attribute:: topics

      The set of topics this policy applies to.


      :type: :py:class:`~@aws-cdk/aws-sns.TopicRef`


TopicProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicProps

   Properties for a new SNS topic




   .. py:attribute:: displayName

      A developer-defined string that can be used to identify this SNS topic.


      :type: string or undefined


   .. py:attribute:: topicName

      A name for the topic.  If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the topic name. For more information, see Name Type.


      :type: string or undefined


TopicRef
^^^^^^^^

.. py:class:: TopicRef(parent, name)

   Either a new or imported Topic


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-events.IEventRuleTarget`
   :implements: :py:class:`@aws-cdk/aws-cloudwatch.IAlarmAction`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string

   .. py:staticmethod:: import(parent, name, props) -> @aws-cdk/aws-sns.TopicRef

      Import a Topic defined elsewhere


      :param parent: 
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param name: 
      :type name: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-sns.TopicRefProps`
      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicRef`


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicRefProps

      Export this Topic


      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicRefProps`


   .. py:method:: subscribe(name, endpoint, protocol)

      Subscribe some endpoint to this topic


      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`


   .. py:method:: subscribeQueue(queue) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an SQS queue.  The queue resource policy will be updated to allow this SNS topic to send messages to the queue.  TODO: change to QueueRef.


      :param queue: The target queue
      :type queue: :py:class:`@aws-cdk/aws-sqs.QueueRef`
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS Topic to a Lambda function.  The Lambda's resource policy will be updated to allow this topic to invoke the function.


      :param lambdaFunction: The Lambda function to invoke
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.LambdaRef`
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an email address.


      :param name: A name for the subscription
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: 
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions` or undefined
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`


   .. py:method:: subscribeUrl(name, url) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an http:// or https:// URL.


      :param name: A name for the subscription
      :type name: string
      :param url: The URL to invoke
      :type url: string
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`


   .. py:method:: addToResourcePolicy(statement)

      Adds a statement to the IAM resource policy associated with this topic.  If this topic was created in this stack (`new Topic`), a topic policy will be automatically created upon the first call to `addToPolicy`. If the topic is improted (`Topic.import`), then this is a no-op.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: grantPublish([identity])

      Grant topic publishing permissions to the given identity


      :param identity: 
      :type identity: :py:class:`@aws-cdk/aws-iam.IIdentityResource` or undefined


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      Construct a Metric object for the current topic for the given metric


      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the size of messages published through this topic


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of messages published through this topic


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricNumberOfMessagesFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of messages that failed to publish through this topic


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricNumberOfMessagesDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of messages that were successfully delivered through this topic


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:attribute:: topicArn

      :type: :py:class:`~@aws-cdk/aws-sns.TopicArn` *(readonly)* *(abstract)*


   .. py:attribute:: topicName

      :type: :py:class:`~@aws-cdk/aws-sns.TopicName` *(readonly)* *(abstract)*


   .. py:attribute:: autoCreatePolicy

      Controls automatic creation of policy objects.  Set by subclasses.


      :type: boolean *(readonly)* *(abstract)*


   .. py:attribute:: eventRuleTarget

      Returns a RuleTarget that can be used to trigger this SNS topic as a result from a CloudWatch event.


      :type: :py:class:`@aws-cdk/aws-events.EventRuleTargetProps` *(readonly)*


   .. py:attribute:: alarmActionArn

      Return the ARN that should be used for a CloudWatch Alarm action


      :type: :py:class:`@aws-cdk/cdk.Arn` *(readonly)*


TopicRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicRefProps

   Reference to an external topic.




   .. py:attribute:: topicArn

      :type: :py:class:`~@aws-cdk/aws-sns.TopicArn`


   .. py:attribute:: topicName

      :type: :py:class:`~@aws-cdk/aws-sns.TopicName`



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-sns.cloudformation

SubscriptionResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: SubscriptionResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SubscriptionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SubscriptionResource``
   :type properties: :py:class:`~@aws-cdk/aws-sns.cloudformation.SubscriptionResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


SubscriptionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SubscriptionResourceProps



   .. py:attribute:: endpoint

      ``AWS::SNS::Subscription.Endpoint``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-endpoint


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: protocol

      ``AWS::SNS::Subscription.Protocol``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-protocol


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: topicArn

      ``AWS::SNS::Subscription.TopicArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#topicarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


TopicPolicyResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: TopicPolicyResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TopicPolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TopicPolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-sns.cloudformation.TopicPolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


TopicPolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TopicPolicyResourceProps



   .. py:attribute:: policyDocument

      ``AWS::SNS::TopicPolicy.PolicyDocument``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html#cfn-sns-topicpolicy-policydocument


      :type: json or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: topics

      ``AWS::SNS::TopicPolicy.Topics``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html#cfn-sns-topicpolicy-topics


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


TopicResource
~~~~~~~~~~~~~

.. py:class:: TopicResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TopicResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TopicResource``
   :type properties: :py:class:`~@aws-cdk/aws-sns.cloudformation.TopicResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: topicName

      :type: :py:class:`~@aws-cdk/aws-sns.TopicName` *(readonly)*

   .. py:class:: SubscriptionProperty



      .. py:attribute:: endpoint

         ``TopicResource.SubscriptionProperty.Endpoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-subscription.html#cfn-sns-topic-subscription-endpoint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: protocol

         ``TopicResource.SubscriptionProperty.Protocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-subscription.html#cfn-sns-topic-subscription-protocol


         :type: string or :py:class:`@aws-cdk/cdk.Token`



TopicResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TopicResourceProps



   .. py:attribute:: displayName

      ``AWS::SNS::Topic.DisplayName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-displayname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: subscription

      ``AWS::SNS::Topic.Subscription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-subscription


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-sns.cloudformation.TopicResource.SubscriptionProperty` or undefined


   .. py:attribute:: topicName

      ``AWS::SNS::Topic.TopicName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-topicname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-sns

